<package format="3">
  <name>hapticdevice_URDF</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for hapticdevice_URDF</p>
    <p>This package contains configuration data, 3D models and launch files
for hapticdevice_URDF robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com">TODO</maintainer>
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>controller_manager_msgs</exec_depend>
  <exec_depend>forward_command_controller</exec_depend>
  <exec_depend>gazebo_msgs</exec_depend>
  <exec_depend>gz_ros2_control</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>xacro</exec_depend>
  <export>
    <architecture_independent />
    <build_type>ament_cmake</build_type>
  </export>
</package>
